--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "rete": "^2.0.2",
     "rete-area-plugin": "^2.0.1",
     "rete-auto-arrange-plugin": "^2.0.0",
+    "rete-comment-plugin": "^2.0.0",
     "rete-connection-plugin": "^2.0.0",
     "rete-context-menu-plugin": "^2.0.0",
+    "rete-history-plugin": "^2.0.0",
     "rete-minimap-plugin": "^2.0.0",
     "rete-render-utils": "^2.0.1",
     "rete-vue-plugin": "^2.0.4",
