--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rete-auto-arrange-plugin": "^2.0.0",
     "rete-comment-plugin": "^2.0.0",
     "rete-connection-plugin": "^2.0.0",
+    "rete-connection-reroute-plugin": "^2.0.0",
     "rete-context-menu-plugin": "^2.0.0",
     "rete-history-plugin": "^2.0.0",
     "rete-minimap-plugin": "^2.0.0",
