--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.20",
     "@types/toastr": "^2.1.41",
     "@vitejs/plugin-vue": "^4.3.4",
     "ant-design-vue": "^4.0.3",
